did a great deal

--- a/Core/templates/index.html
+++ b/Core/templates/index.html
@@ -131,8 +131,13 @@
 								<ul class="submenu">
 														
 									
-							<li><a href="{% url 'login' %}">Login</a></li>
-							<li><a href="{% url 'register' %}">Register</a></li>				
+								{% if request.user.is_authenticated %}
+								<li><a href="{% url 'logout' %}">Logout</a></li>
+
+								{% else %}
+								<li><a href="{% url 'login' %}">Login</a></li>
+								<li><a href="{% url 'register' %}">Register</a></li>
+								{% endif %}
 								</ul>
 							</li>
 									
